--- a/src/views/home/Home.css
+++ b/src/views/home/Home.css
@@ -1,15 +1,35 @@
 .home {
     display: flex;
+    flex-direction: column;
     flex-grow: 1;
-    align-items: center;
+    justify-content: center;
 }
 
-.home h1 {
+.home .typing {
     overflow: hidden;
     border-right: .15em solid orange;
     white-space: nowrap;
     letter-spacing: .1em;
-    animation: typing 3.5s steps(30, end), blink-caret .5s step-end infinite;
+}
+
+.home h1 {
+    color: #011638;
+    animation: typing 3.5s steps(30, end), blink-caret .5s step-end 6 forwards;
+}
+
+/* 3.5s */
+
+.home h2 {
+    font-family: 'Yomogi', sans-serif;
+    color: #011638;
+    animation: show 1s forwards, typing 2.5s steps(30, end), blink-caret .5s step-end infinite;
+    animation-delay: 3.5s !important;
+    opacity: 0;
+}
+
+@keyframes show {
+    from { opacity: 0 }
+    to { opacity: 1 }
 }
 
 @keyframes typing {
