made homepage more responsive

--- a/src/views/home/Home.css
+++ b/src/views/home/Home.css
@@ -5,6 +5,15 @@
     justify-content: center;
 }
 
+@media screen and (max-width: 400px) {
+    .home h1 {
+        font-size: smaller;
+    }
+    .home h2 {
+        font-size: smaller;
+    }
+}
+
 .home .typing {
     overflow: hidden;
     border-right: .15em solid orange;
@@ -12,19 +21,24 @@
     letter-spacing: .1em;
 }
 
-.home h1 {
-    color: #011638;
-    animation: typing 3.5s steps(30, end), blink-caret .5s step-end 6 forwards;
+.home .fitContent {
+    display: inline-block;
+    width: fit-content;
 }
 
-/* 3.5s */
+.home h1 {
+    color: #011638;
+    animation: typing 2s steps(30, end), blink-caret .5s step-end 4 forwards;
+    display: inline-block;
+}
 
 .home h2 {
     font-family: 'Yomogi', sans-serif;
     color: #011638;
-    animation: show 1s forwards, typing 2.5s steps(30, end), blink-caret .5s step-end infinite;
-    animation-delay: 3.5s !important;
+    animation: show 2s forwards, typing 2s steps(30, end), blink-caret .5s step-end infinite;
+    animation-delay: 2s;
     opacity: 0;
+    display: inline-block;
 }
 
 @keyframes show {
